<resources>
    <string name="app_name">Daedongyeojido_v1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_mypage">마이페이지</string>
    <string name="navigation_notice">공지</string>
    <string name="navigation_application">지원서 확인</string>
    <string name="navigation_management">동아리 관리</string>
    <string name="navigation_request">동아리 회식 신청</string>
    <string name="navigation_accept">동아리 회식 수락</string>
    <string name="navigation_bug">문의하기</string>
    <string name="navigation_logout">로그아웃</string>

    <string name="login">로그인</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>

    <string name="detail_info">동아리 정보</string>
    <string name="detail_apply">동아리 지원</string>
    <string name="detail_qna">QnA</string>

    <string name="club_introduce">동아리 소개</string>
    <string name="club_member">동아리원</string>
    <string name="member_second">2학년</string>
    <string name="member_third">3학년</string>
    <string name="club_project">프로젝트</string>
    <string name="club_want">인재상</string>
</resources>