<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_login_id"
        style="@style/lay_login_edit"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login_logo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_id"
            style="@style/edit_login"
            android:hint="@string/login_id"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/lay_login_edit"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/lay_login_id"
        app:layout_constraintEnd_toEndOf="@id/lay_login_id"
        app:layout_constraintTop_toBottomOf="@id/lay_login_id">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_pw"
            style="@style/edit_login"
            android:inputType="textPassword"
            android:hint="@string/login_pw"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/btn_next"
        android:backgroundTint="@color/button_gray"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>