<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".club.ClubDetailFragment">

    <ImageView
        android:id="@+id/img_detail_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/himchan_bold"
        android:text="동아리 이름"
        android:textSize="28sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/img_detail_logo"
        app:layout_constraintTop_toTopOf="@id/img_detail_logo"/>

    <TextView
        android:id="@+id/text_detail_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:fontFamily="@font/himchan_medium"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/text_detail_name"
        app:layout_constraintTop_toBottomOf="@id/text_detail_name"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/lay_detail_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@style/tab_text"
        app:tabIndicatorColor="@color/black"
        app:tabTextColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorFullWidth="true"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail_logo">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_info"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_apply"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_qna"/>
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/lay_detail_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/lay_detail_tab"
        app:layout_constraintEnd_toEndOf="@id/lay_detail_tab"
        app:layout_constraintTop_toBottomOf="@id/lay_detail_tab"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>